Agregada funcionalidad para mostrar pantallas de metodo de pago
Se agrego la funcionalidad para mostrar cada pantalla de los diferentes tipos de metodos de pago.

Co-Authored-By: RamonVH18 <199168436+RamonVH18@users.noreply.github.com>
Co-Authored-By: Yizbin <148611835+Yizbin@users.noreply.github.com>